<resources>
    <string name="app_name">Portfolio</string>
    <string name="userID">Dog ID</string>
    <string name="userName">Dog Name</string>
    <string name="userPhone">Dog Age</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_with_linkedin">Sign In with LinkedIn</string>
    <string name="logout">Logout</string>
    <string name="open_my_profile">Open My Profile</string>
    <string name="open_others_profile">Open Others Profile</string>
    <string name="share">Share</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <string name="log_in">Log In</string>
    <string name="create_a_profile">Create A Profile</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="this_app_is_designed_to_allow_users_to_create_a_customized_eportfolio_where_you_can_create_edit_and_view_content_of_your_choice_contact_us_brian_toulouse_snhu_edu">This app is designed to allow users to create a customized ePortfolio. Where you can create edit and view content of your choice. Contact Us: brian.toulouse@snhu.edu</string>
    <string name="create_file">Create File</string>
    <string name="file_name">File Name</string>
    <string name="load_file">Load File</string>
    <string name="user_id">User ID</string>
    <string name="auto_assigned">Auto Assigned</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="profile_url">Profile URL</string>
    <string name="add_user">Add User</string>
    <string name="name1">Name:</string>
    <string name="view_webpage">View Webpage</string>
    <string name="view">View</string>
    <string name="create_bio">Create Bio</string>
    <string name="create">Create</string>
    <string name="calendar">Calendar</string>
    <string name="maps">Maps</string>
    <string name="portfolio_home">Portfolio Home</string>
    <string name="phone1">Phone:</string>
    <string name="address2">Address:</string>
    <string name="email2">Email:</string>
    <string name="linkedin">LinkedIn</string>
    <string name="url">URL</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_user1">delete user</string>
    <string name="return_home">Return Home</string>
    <string name="log_out">Log Out</string>
</resources>
